# kserver

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  build_until_completion.sh  ci_compile  compile  kiq.sql  kiq_schema.sql  kserver_docs.css  kygen.dox  main.cpp  protocol.mmd
.circleci/: Dockerfile  config.yml
config/: config.ini  default.config.ini  execute_script.sh  test
config/db/: queries.sql
include/: DatabaseConnection.cpp  kmessage.fbs  kserver.hpp  request_handler.hpp  send_interface.hpp  socket_listener.hpp  structs.h  task_queue.hpp  types.hpp
include/codec/: a.out  crypter.hpp  decoder.hpp  generictask.fbs  generictask_generated.h  instatask.fbs  instatask_generated.h  kmessage_generated.h  test.cpp  util.hpp  uuid.h
include/common/: time.cpp  time.hpp  util.cpp  util.hpp
include/config/: config_parser.cpp  config_parser.hpp
include/database/: DatabaseConnection.cpp  DatabaseConnection.h  database_connection.hpp  database_interface.hpp  db_structs.hpp  kdb.hpp  structs.h
include/executor/: execperiment.hpp  executor.hpp  execxx.hpp  kapplication.hpp  scheduler.hpp
include/executor/task_handlers/: generic.hpp  instagram.hpp  task.hpp
include/interface/: listen_interface.hpp  send_interface.hpp  socket_listener.hpp  worker_interface.hpp
include/log/: logger.cpp  logger.h
include/process/client/: client.hpp
include/process/ipc/: ipc.hpp
include/process/manager/: manager.hpp
include/request/: controller.cpp  controller.cpp.bak  controller.hpp  request_handler.hpp  types.hpp
include/request/task_handlers/: instagram.hpp
include/server/: event_handler.cpp  event_handler.hpp  kserver.cpp  kserver.hpp  serdes.hpp  session.cpp  session.hpp  types.hpp
include/system/: cron.hpp
include/system/process/: affiliate_user_post.mmd  helper.cpp  helper.hpp  platform.cpp  platform.hpp  platform_utils.cpp  registrar.hpp  research_manager.cpp  research_manager.hpp  result_parser.cpp  result_parser.hpp  scheduler.cpp  scheduler.hpp  trigger.cpp  trigger.hpp
include/system/process/executor/: environment.hpp  executor.cpp  executor.hpp  execxx.hpp  kapplication.hpp
include/system/process/executor/task_handlers/: generic.cpp  generic.hpp  instagram.cpp  instagram.hpp  task.cpp  task.hpp
include/system/process/ipc/: client.cpp  client.hpp  ipc.hpp  ipc_structs.hpp  manager.cpp  manager.hpp  worker.cpp  worker.hpp
include/system/process/ipc/client/: client.cpp  client.hpp
include/system/process/ipc/manager/: manager.cpp  manager.hpp
include/task/: task_queue.hpp
include/types/: constants.hpp
src/: config_parser.cpp  database_connection.cpp  helpers.hpp  main.cpp  socket_listener.cpp  task_queue.cpp
test/: .gitignore  CMakeLists.txt  CONFIG REQUIRED: [logging] path  kserver_test  test  test.cpp
test/data/: mock_v.env
test/mock_data/: mock_v.env
test/src/: main.cpp
test/src/codec/: util_test.hpp
test/src/database/: database_connection_test.hpp
test/src/executor/: environment.test.cpp  environment.test.hpp  scheduler.hpp  v.env
test/src/executor/task/: task_test.hpp
test/src/kserver/: kserver_test.hpp
test/src/server/: kserver_test.hpp
test/src/server/client/: client.hpp  mock_data.cpp  mock_data.hpp
test/src/socket/: socket_listener.hpp
